--- a/group-zuojun-ning.yaml
+++ b/group-zuojun-ning.yaml
@@ -1,9 +1,12 @@
-
 apiVersion: backstage.io/v1alpha1
 kind: Group
 metadata:
   name: zuojun-ning
+  namespace: default
   description: Group for Zuojun Ning
 spec:
   type: team
   children: []
+  ancestors: []
+  parent: default
+
